test-expected/large/casaccessmanagement/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    foo.com/duname: casacl
    foo.com/duversion: 1.6.9-20190923.1569266206874
    foo.com/version: 1.6.9
  labels:
    app.kubernetes.io/name: casaccessmanagement
    helm.sh/chart: casaccessmanagement-1.6.9
  name: casaccessmanagement
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: casaccessmanagement
  type: ClusterIP
